--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -25,6 +25,10 @@ button {
   color: var(--color-txt);
 }
 
+a, button {
+  border: var(--border-m) solid var(--color-border);
+}
+
 .catchy {
   position: relative;
 }
